--- a/css/style.css
+++ b/css/style.css
@@ -1387,9 +1387,11 @@ ul.simplefilter {
 
 /*-- //contact --*/
 /*-- footer --*/
-.footer {
-	background: #333;
+footer {
+	background: rgba(51, 51, 51, 0.5);
 	padding: 4em 0;
+	width: 100%;
+
 }
 
 .footer-title h3 {
@@ -1542,6 +1544,7 @@ ul.simplefilter {
 	justify-content: space-between;
 	align-items: center;
 	text-align: center;
+	width: 100%;
 }
 
 /*-- //copyright --*/
